further tweaks, basically done now

--- a/report/wbbz74.tex
+++ b/report/wbbz74.tex
@@ -29,6 +29,8 @@ See the attached document for the tree diagram of \texttt{books.xml}. This is av
 
 \section{Querying}
 
+All query files were posted as part of this submission.
+
 \subsection{XPath}
 
 \subsubsection{Find all Mary Poppins books which were published before WWII.}
@@ -164,8 +166,12 @@ return $b
   <illustrator>Mary Shepard</illustrator>
 </book>
 \end{verbatim} 
-% I AM NOT SURE OR NOT IF THIS IS POSSIBLE FOR XPATH, THIS IS JUST A GUESS
-\item \textit{XPath}: This is not possible to be performed within XPath as more than one database needs to be accessed, and there are such dependencies between 
+
+\item \textit{XPath}: This is not possible to be performed within XPath as more than one database needs to be accessed, and there are such dependencies between these different database files. However, if we assume both datasets are present in the same file (where the \texttt{books} and \texttt{media} nodes are both present at the root of the file and that \texttt{books} appears before \texttt{media} and both lists are contained within a \texttt{root} node), we can construct a rough query. We must assume that the nodes in the XML file are already ordered by date, which is the major limitation of this technique.
+% THIS SHOULD WORK I THINK BUT I CANNOT GET THIS TO WORK!
+\begin{verbatim}
+//books[number(@publicationDate)<number(ancestor::root//movie[2]/@year)]
+\end{verbatim}
 \end{enumerate}
 
 \subsubsection{How much later has the most recent Mary Poppins movie appeared, compared to the second book about Mary Poppins?}
@@ -198,7 +204,8 @@ return <result>{$diff} years</result>
 \begin{verbatim}
 <result>83 years</result>
 \end{verbatim} 
-\item \textit{XPath}: not sure if this is possible for multiple XML files.
+% I AM NOT SURE OR NOT IF THIS IS POSSIBLE FOR XPATH, THIS IS JUST A GUESS
+\item \textit{XPath}: This is not a query that is possible for XPath to handle. This is due to the fact there are dependencies on accessing 2 independent lists of data and then the performing of an operation of the result of the two independent lists. As XPath is only able to access a single list of data, this is not a query that is able to be performed with XPath.
 \end{enumerate}
 
 
