--- a/report/wbbz74.tex
+++ b/report/wbbz74.tex
@@ -111,7 +111,7 @@ return <result>{count($b)}</result>
 \begin{verbatim}
 <result>8</result>
 \end{verbatim} 
-\item \textit{XPath}: As XPath and XQuery share the same functions library, we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless:
+\item \textit{XPath}: As XPath and XQuery share the same functions library, we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless. The only difference with this result is that the result will not be wrapped in a \texttt{<result>} tag:
 \begin{verbatim}
 count(//book[title[contains(text(),"Mary Poppins")]])
 \end{verbatim}
@@ -167,7 +167,7 @@ return $b
 </book>
 \end{verbatim} 
 
-\item \textit{XPath}: This is not possible to be performed within XPath as more than one database needs to be accessed, and there are such dependencies between these different database files. However, if we assume both datasets are present in the same file (where the \texttt{books} and \texttt{media} nodes are both present at the root of the file and that \texttt{books} appears before \texttt{media} and both lists are contained within a \texttt{root} node), we can construct a rough query. We must assume that the nodes in the XML file are already ordered by date, which is the major limitation of this technique. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. (As this query is long it is broken up into several lines here, although it should be run just as a single line when executing).
+\item \textit{XPath}: If we assume both datasets are present in the same file (where the \texttt{books} and \texttt{media} nodes are both present at the root of the file and that \texttt{books} appears before \texttt{media} and both lists are contained within a \texttt{root} node), we can construct a rough query. We must assume that the nodes in the XML file are already ordered by date, which is the major limitation of this technique. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. (As this query is long it is broken up into several lines here, although it should be run just as a single line when executing).
 % verified working
 \begin{small}
 \begin{verbatim}
